[project]
name = "paperrag"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aoyang Fang", email = "aoyangfang@gmail.com"},
]
dependencies = [
    "llama-index>=0.10.61",
    "llama-index-llms-ollama>=0.2.2",
    "llama-index-embeddings-ollama>=0.1.3",
    "llama-index-vector-stores-chroma>=0.1.10",
    "loguru>=0.7.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
